--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "dependencies": {
     "airtable": "^0.11.4",
     "axios": "^0.27.2",
+    "cucumber": "^6.0.7",
     "dotenv": "^16.0.1",
     "form-data": "^4.0.0",
     "image-downloader": "^4.3.0",
+    "react-scripts": "^5.0.1",
     "wpapi": "^1.2.2"
   },
   "devDependencies": {
